# multi-agent-adk-integration

./: .env  .env.template  .gitignore  Code Framework Updates.md  TESTING_GUIDE.md  USER_GUIDE.md  pyproject.toml  requirements.txt  test_vertex_auth.py  tutorial.py
Project Documentation/: how to deploy to cloud run.md  misc.txt  recent_fixes.md  ultra-investigation results 250704.md
Project Documentation/AI Context/: HISTORY2.md  Vertex AI SDK migration guide.md  adk memory and context.md  adk-llms-full.txt  file-list-adk-llms.txt  google gemini openai compatability.md  google genai in vertexai api quickstart.md
Project Documentation/context/: adk_v1.5.0_changes.md  context_update.md  plan.md
Project Documentation/docs/: ADK_V1_5_0_MIGRATION.md  AGENTS_a.md  DEPLOYMENT.md  INSTALLATION_a.md  STREAMLIT_INTERFACE.md  TROUBLESHOOTING_a.md
multi_agent_research_platform/: .env  .env.template  CLAUDE.md  ISSUE_RESOLVED.md  PROJECT_STATUS.md  README.md  SETUP_GUIDE.md  cloudbuild.yaml  debug_logs.py  fix_environment.sh  pytest.ini  run_tests.py  setup_shell.sh  start_debug_session.py  test_adk_integration.py
multi_agent_research_platform/docs/: AGENTS.md  AGENTS_a.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_a.md  CONTRIBUTING.md  EXAMPLES.md  FIXED_VENV.md  INSTALLATION.md  QUICKSTART.md  QUICKSTART_a.md  README.md  TROUBLESHOOTING.md  WEB_INTERFACE.md  WEB_INTERFACE_ADK_V1_5_0.md  authentication and credentials for GCP instructions.md
multi_agent_research_platform/examples/: gemini_2_5_demo.py  gemini_model_demo.py
multi_agent_research_platform/src/: __init__.py
(+90 files in other folders)
