[project]
name = "multi-agent-research-platform"
version = "0.1.0"
description = "Comprehensive multi-agent research platform using Google ADK with sophisticated context management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "black>=25.1.0",
    "fastapi>=0.115.14",
    "google-adk>=1.5.0",
    "google-auth>=2.40.3",
    "google-genai>=1.24.0",
    "httpx>=0.28.1",
    "isort>=6.0.1",
    "matplotlib>=3.10.3",
    "mypy>=1.16.1",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "pre-commit>=4.2.0",
    "psutil>=7.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pypdf>=5.7.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.4.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "ruff>=0.12.2",
    "scipy>=1.16.0",
    "streamlit>=1.46.1",
    "structlog>=25.4.0",
    "uvicorn[standard]>=0.35.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] 
include = ["multi_agent_research_platform*"]
exclude = ["logs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["multi_agent_research_platform/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "setuptools>=80.9.0",
]
